--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <span lang="en"><b>Our goal</b> is to open a world of open data that will help you, when the IT environment becomes a daily need.</span>
                 </div>
                 <div class="col-lg-6 landing-teams-container">
-                    <img class="landing-teams-container__img" src="static/img/team_i.png">
+                    <img class="landing-teams-container__img" src="static/img/team_i.svg">
                 </div>
             </div>
         </div>
