--- a/src/index.html
+++ b/src/index.html
@@ -596,8 +596,8 @@
 
     <div class="login-modal">
         <form class="login-group" id="loginform">
-            <input type="email" name="emailLogin" id="emailLogin" class="input" required placeholder="Email">
-            <input type="password" name="passwordLogin" id="passwordLogin" class="input" required>
+            <input type="email" name="emailLogin" id="emailLogin" class="input" placeholder="Email">
+            <input type="password" name="passwordLogin" id="passwordLogin" class="input">
             <span id="error_login"></span>
             <button id="login-submit" class="btn-primary btn-primary_submit" type="submit">
                 <span lang="uk">Увійти</span>
