--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="description" content="Data Ocean. We help financial institutions to identify PEPs among their clients, perform KYC, AML procedures.">
     <title>Data Ocean</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/logoDO192.png" type="image/png" sizes="192x192">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
