--- a/src/index.html
+++ b/src/index.html
@@ -279,7 +279,7 @@
                     <span lang="en">In the Data Ocean team, veterans of ATO/JFO, anti-corruption activists and volunteers are doing everything to make working with goverment data comfortable and useful.</span>
                 </div>
                 <div class="col-lg-6 landing-teams-container">
-                    <img class="landing-teams-container__img" src="img/team_ph.jpg">
+                    <img class="landing-teams-container__img" src="img/team_ph2.jpg">
                 </div>
             </div>
         </div>
@@ -300,61 +300,25 @@
                         <span lang="uk">Люба Шипович</span>
                         <span lang="en">Lyuba Shipovich</span>
                     </div>
-                    <div class="user-card__title">Project Leader in Data Ocean</div>
+                    <div class="user-card__title">CEO</div>
                 </div>
 
                 <div class="user-card">
-                    <img src="img/team/Ugin-Poremchuk.png" class="user-card__image">
+                    <img src="img/team/Anna-Degtereva.png" class="user-card__image">
                     <div class="user-card__name h6">
-                        <span lang="uk">Євген Поремчук</span>
-                        <span lang="en">Ugin Poremchuk</span>
+                        <span lang="uk">Анна Дегтерeва</span>
+                        <span lang="en">Anna Degtereva</span>
                     </div>
-                    <div class="user-card__title">СТО</div>
+                    <div class="user-card__title">BizDev Manager</div>
                 </div>
 
                 <div class="user-card">
-                    <img src="img/team/Yehor-Sobolev.png" class="user-card__image">
-                    <div class="user-card__name h6">
-                        <span lang="uk">Єгор Соболєв</span>
-                        <span lang="en">Yehor Sobolev</span>
-                    </div>
-                    <div class="user-card__title">Python developer</div>
-                </div>
-
-                <div class="user-card">
-                    <img src="img/team/Maksym-Nazaruk.png" class="user-card__image">
-                    <div class="user-card__name h6">
-                        <span lang="uk">Максим Назарук</span>
-                        <span lang="en">Maksym Nazaruk</span>
-                    </div>
-                    <div class="user-card__title">Scrum master</div>
-                </div>
-
-                <div class="user-card">
-                    <img src="img/team/Yaroslav-Lepiavko.png" class="user-card__image">
-                    <div class="user-card__name h6">
-                        <span lang="uk">Ярослав Лепявко</span>
-                        <span lang="en">Yaroslav Lepiavko</span>
-                    </div>
-                    <div class="user-card__title">Marketing manager</div>
-                </div>
-
-                <div class="user-card">
-                    <img src="img/team/Roman-Tiukh.png" class="user-card__image">
+                    <img src="img/team/Roman-Tiukh2.png" class="user-card__image">
                     <div class="user-card__name h6">
                         <span lang="uk">Роман Тюх</span>
                         <span lang="en">Roman Tiukh</span>
                     </div>
-                    <div class="user-card__title">Team lead</div>
-                </div>
-
-                <div class="user-card">
-                    <img src="img/team/Vitaliy-Bilous.png" class="user-card__image">
-                    <div class="user-card__name h6">
-                        <span lang="uk">Віталій Білоус</span>
-                        <span lang="en">Vitaliy Bilous</span>
-                    </div>
-                    <div class="user-card__title">Backend developer</div>
+                    <div class="user-card__title">CTO</div>
                 </div>
 
                 <div class="user-card">
@@ -363,7 +327,16 @@
                         <span lang="uk">Анастасія Лащук</span>
                         <span lang="en">Anastasiia Lashchuk</span>
                     </div>
-                    <div class="user-card__title">Project manager</div>
+                    <div class="user-card__title">Product manager</div>
+                </div>
+
+                <div class="user-card">
+                    <img src="img/team/Yaroslav-Lepiavko.png" class="user-card__image">
+                    <div class="user-card__name h6">
+                        <span lang="uk">Ярослав Лепявко</span>
+                        <span lang="en">Yaroslav Lepiavko</span>
+                    </div>
+                    <div class="user-card__title">Client Success Lead</div>
                 </div>
 
                 <div class="user-card">
@@ -372,25 +345,61 @@
                         <span lang="uk">Олексій Середюк</span>
                         <span lang="en">Oleksiy Serediuk</span>
                     </div>
-                    <div class="user-card__title">Product designer</div>
+                    <div class="user-card__title">UX/UI Specialist</div>
+                </div>
+
+                <div class="user-card">
+                    <img src="img/team/Vitaliy-Bilous.png" class="user-card__image">
+                    <div class="user-card__name h6">
+                        <span lang="uk">Віталій Білоус</span>
+                        <span lang="en">Vitalii Bilous</span>
+                    </div>
+                    <div class="user-card__title">DevOps</div>
+                </div>
+
+                <div class="user-card">
+                    <img src="img/team/Yehor-Sobolev.png" class="user-card__image">
+                    <div class="user-card__name h6">
+                        <span lang="uk">Єгор Соболєв</span>
+                        <span lang="en">Iegor Sobolev</span>
+                    </div>
+                    <div class="user-card__title">Software Engineer</div>
                 </div>
 
                 <div class="user-card">
                     <img src="img/team/Ivan-Kharina.png" class="user-card__image">
                     <div class="user-card__name h6">
-                        <span lang="uk">Іван Харина</span>
+                        <span lang="uk">Іван Харіна</span>
                         <span lang="en">Ivan Kharina</span>
                     </div>
-                    <div class="user-card__title">Backend developer</div>
+                    <div class="user-card__title">Software Engineer</div>
+                </div>
+
+                <div class="user-card">
+                    <img src="img/team/Andrii-Shchepak.png" class="user-card__image">
+                    <div class="user-card__name h6">
+                        <span lang="uk">Андрій Щепак</span>
+                        <span lang="en">Andrii Shchepak</span>
+                    </div>
+                    <div class="user-card__title">Software Engineer</div>
+                </div>
+
+                <div class="user-card">
+                    <img src="img/team/Emma-Samojlova.png" class="user-card__image">
+                    <div class="user-card__name h6">
+                        <span lang="uk">Емма Самойлова</span>
+                        <span lang="en">Emma Samojlova</span>
+                    </div>
+                    <div class="user-card__title">Software Engineer</div>
                 </div>
 
                 <div class="user-card">
                     <img src="img/team/Oleksandr-Topusov.png" class="user-card__image">
                     <div class="user-card__name h6">
                         <span lang="uk">Олександр Топузов</span>
-                        <span lang="en">Oleksandr Topusov</span>
+                        <span lang="en">Oleksandr Topuzov</span>
                     </div>
-                    <div class="user-card__title">Web developer</div>
+                    <div class="user-card__title">Software Engineer</div>
                 </div>
 
                 <div class="user-card">
@@ -399,17 +408,35 @@
                         <span lang="uk">Олена Янішевська</span>
                         <span lang="en">Olena Yanishevska</span>
                     </div>
-                    <div class="user-card__title">Junior frontend developer</div>
+                    <div class="user-card__title">Frontend Developer</div>
                 </div>
 
                 <div class="user-card">
-                    <img src="img/team/Oleksa-Bezobchuk.png" class="user-card__image">
+                    <img src="img/team/Victor-Averin.png" class="user-card__image">
                     <div class="user-card__name h6">
-                        <span lang="uk">Олександр Безобчук</span>
-                        <span lang="en">Oleksa Bezobchuk</span>
+                        <span lang="uk">Віктор Аверін</span>
+                        <span lang="en">Victor Averin</span>
                     </div>
-                    <div class="user-card__title">Product designer</div>
+                    <div class="user-card__title">Software Testing Engineer</div>
                 </div>
+
+<!--                <div class="user-card">-->
+<!--                    <img src="img/team/Maksym-Nazaruk.png" class="user-card__image">-->
+<!--                    <div class="user-card__name h6">-->
+<!--                        <span lang="uk">Максим Назарук</span>-->
+<!--                        <span lang="en">Maksym Nazaruk</span>-->
+<!--                    </div>-->
+<!--                    <div class="user-card__title">Scrum master</div>-->
+<!--                </div>-->
+
+<!--                <div class="user-card">-->
+<!--                    <img src="img/team/Oleksa-Bezobchuk.png" class="user-card__image">-->
+<!--                    <div class="user-card__name h6">-->
+<!--                        <span lang="uk">Олександр Безобчук</span>-->
+<!--                        <span lang="en">Oleksa Bezobchuk</span>-->
+<!--                    </div>-->
+<!--                    <div class="user-card__title">Product designer</div>-->
+<!--                </div>-->
             </div>
         </div>
     </section>
